<resources>
    <string name="app_name">Rush In Alarm</string>
    <string name="ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="ad_size">BANNER</string>


    <string name="alarm">Alarm</string>
    <string name="alarm_setup">Alarm Setup</string>
    <string name="default_time">9:00</string>
    <string name="repeat">Repeat</string>
    <string name="default_repeat_mode">never</string>
    <string name="volume">Volume</string>
    <string name="default_sound">Mountain</string>
    <string name="sound_and_music">Sound and Music</string>
    <string name="vibration">Vibration</string>
    <string name="fade_in">Fade In</string>
    <string name="fade_in_txt">Gently increases alarm volume</string>
    <string name="snooze_duration">Snooze Duration</string>
    <string name="snooze_txt">15 minutes</string>
    <string name="note">Note</string>
    <string name="Save">save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="_10_minutes">10 Minutes</string>
    <string name="_5_minutes">5 Minutes</string>
    <string name="_15_minutes">15 Minutes</string>
    <string name="_20_minutes">20 Minutes</string>
    <string name="_25_minutes">25 Minutes</string>
    <string name="_30_minutes">30 Minutes</string>
    <string name="never">Never</string>
    <string name="set_sound">Set Sound</string>
    <string name="every_monday">Every Monday</string>
    <string name="every_tuesday">Every Tuesday</string>
    <string name="snooze">Snooze</string>
    <string name="stop">Stop</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="help">Help</string>


    <array name="alarm_names">
        <item>Alarm</item>
        <item>Awesome Alarm</item>
        <item>Nice Alarm</item>
        <item>Rhythmic Alarm</item>
        <item>Sweet Alarm</item>
    </array>
</resources>
