<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:padding="@dimen/large_padding"
    tools:context="com.linearbd.sohel.rushinalarm.Activities.AlarmRingingActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/medium_padding">

        <ImageView
            android:layout_width="@dimen/big_icon_dim"
            android:layout_height="@dimen/big_icon_dim"
            android:layout_centerHorizontal="true"
            android:src="@drawable/snooze"
            android:id="@+id/snooze"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.Medium"
            android:text="@string/snooze"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/snooze"/>

    </RelativeLayout>

   <RelativeLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentEnd="true"
       android:padding="@dimen/medium_padding">

       <ImageView
           android:layout_width="@dimen/big_icon_dim"
           android:layout_height="@dimen/big_icon_dim"
           android:layout_centerHorizontal="true"
           android:src="@drawable/stop_alarm"
           android:id="@+id/stop"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           style="@style/Text.Medium"
           android:text="@string/stop"
           android:layout_below="@+id/stop"
           android:layout_centerHorizontal="true"/>

   </RelativeLayout>





    <com.linearbd.sohel.rushinalarm.ViewModel.SohelClockView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/medium_padding"
        android:id="@+id/clock"/>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_padding"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="@string/ad_size"
        ads:adUnitId="@string/ad_unit_id">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
