<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sohel.rushinalarm.Activities.RepeatActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/MaterialAnimations.TextAppearance.Title"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/theme_black_primary"
        android:elevation="@dimen/elevation_header">

        <TextView
            android:id="@+id/title"
            style="@style/MaterialAnimations.TextAppearance.Title.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:text="@string/repeat" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:padding="@dimen/default_padding">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/every_monday"
            style="@style/Text.Large"
            android:id="@+id/ckb_monday"
            android:textColor="@color/theme_black_text"/>

        <CheckBox
            android:layout_marginTop="@dimen/large_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/every_tuesday"
            android:layout_below="@+id/ckb_monday"
            android:id="@+id/ckb_tuesday"
            style="@style/Text.Large"
            android:textColor="@color/theme_black_text"/>

        <CheckBox
            android:layout_marginTop="@dimen/large_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Every Wednesday"
            android:layout_below="@+id/ckb_tuesday"
            android:id="@+id/ckb_wednesday"
            style="@style/Text.Large"
            android:textColor="@color/theme_black_text"/>

        <CheckBox
            android:layout_marginTop="@dimen/large_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Every Thursday"
            android:layout_below="@+id/ckb_wednesday"
            android:id="@+id/ckb_thursday"
            style="@style/Text.Large"
            android:textColor="@color/theme_black_text"/>

        <CheckBox
            android:layout_marginTop="@dimen/large_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Every Friday"
            android:layout_below="@+id/ckb_thursday"
            android:id="@+id/ckb_friday"
            style="@style/Text.Large"
            android:textColor="@color/theme_black_text"/>

        <CheckBox
            android:layout_marginTop="@dimen/large_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Every Saturday"
            android:layout_below="@+id/ckb_friday"
            android:id="@+id/ckb_satday"
            style="@style/Text.Large"
            android:textColor="@color/theme_black_text"/>

        <CheckBox
            android:layout_marginTop="@dimen/large_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Every Sunday"
            android:layout_below="@+id/ckb_satday"
            android:id="@+id/ckb_sunday"
            style="@style/Text.Large"
            android:textColor="@color/theme_black_text"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_padding"
            android:layout_below="@+id/ckb_sunday"
            android:text="@string/ok"
            android:id="@+id/ok"/>

    </RelativeLayout>

</RelativeLayout>
